--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Webpack</title>
+  <script src="dist/analytics.bundle.js"></script>
 </head>
 <body>
 <div class="container">
   <h1>webpack</h1>
 </div>
-<script src="src/js/Post.js"></script>
-<script src="src/js/index.js"></script>
+<script src="dist/main.bundle.js"></script>
 </body>
 </html>
